<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boundary">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:layout_margin="2dp"
        android:background="#26D900"

    tools:context="com.example.tharani.imdbproject.MovieDetailActivity">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#CC3300"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:layout_scrollFlags="scroll|enterAlways">
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/RL_movie_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar">
            <ImageView
                android:id="@+id/imageView_moviePoster"
                android:layout_width="170dp"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/movie_poster" />

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:layout_toRightOf="@id/imageView_moviePoster"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/textView_releaseStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/imageView_moviePoster"
                android:layout_below="@id/textView_title"/>


            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_toRightOf="@id/imageView_moviePoster"
                android:layout_below="@+id/textView_releaseStatus"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp"
                android:layout_toRightOf="@id/imageView_moviePoster"
                android:layout_below="@+id/textView_date"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp"
                android:layout_toRightOf="@id/imageView_moviePoster"
                android:layout_below="@+id/textView_budget"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/imageView_votes"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_star"
                android:layout_toRightOf="@id/imageView_moviePoster"
                android:layout_below="@+id/textView_revenue"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/votecount" />

            <TextView
                android:id="@+id/textView_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/textView_revenue"
                android:layout_toRightOf="@+id/imageView_votes"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/textView_vote_average"
                android:layout_toRightOf="@+id/imageView_votes"
                android:layout_marginTop="5dp"/>
            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:stepSize="0.05"
                android:rating="0"
                android:isIndicator="false"
                android:layout_toRightOf="@id/imageView_moviePoster"
                android:layout_below="@+id/imageView_votes"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/view_moviedetails"
            android:layout_below="@id/RL_movie_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boundary">


            <TextView
                android:id="@+id/textView_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView_overview_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/overview"
                android:textStyle="italic"
                android:layout_below="@+id/textView_description"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>



            <TextView
                android:id="@+id/textView_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="italic"
                android:scrollHorizontally="false"
                android:layout_marginTop="5dp"
                android:ellipsize="none"
                android:width="250dp"
                android:layout_below="@id/textView_overview_label"
                android:layout_marginLeft="10dp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <View
            android:layout_below="@id/view_moviedetails"
            android:id="@+id/view_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/background" />

        <ImageView
            android:id="@+id/imageView_favorites"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/unclicked_favourite"
            android:layout_below="@id/view_moviedetails"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="70dp"
            android:contentDescription="@string/menu_favorites" />

        <ImageView
            android:id="@+id/imageView_watchlist"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/unclicked_watchlist"
            android:layout_toRightOf="@id/imageView_favorites"
            android:layout_below="@id/view_moviedetails"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="100dp"
            android:contentDescription="@string/menu_watchlist" />

        <TextView
            android:id="@+id/textView_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/menu_favorites"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/imageView_favorites"
            android:layout_marginLeft="55dp" />

        <TextView
            android:id="@+id/textView_watchlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/menu_watchlist"
            android:textStyle="bold"
            android:layout_marginLeft="60dp"
            android:layout_below="@+id/imageView_watchlist"
            android:layout_toRightOf="@+id/textView_favorites" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/view_posters"
            android:layout_below="@id/textView_watchlist"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/background" />

        <ImageView
            android:id="@+id/imageView_posters"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/round_right"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_below="@id/view_posters"
            android:layout_alignParentLeft="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_posters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/posters"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_alignBottom="@+id/imageView_posters"
            android:layout_toRightOf="@+id/imageView_posters" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView_posters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_posters"
            android:scrollbars="none"
            android:layout_alignParentLeft="true">

            <LinearLayout
                android:id="@+id/linearLayout_posters"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:orientation="horizontal"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp">
            </LinearLayout>
        </HorizontalScrollView>
        <View
            android:id="@+id/view_trailers"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/horizontalScrollView_posters"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/background" />

        <ImageView
            android:id="@+id/imageView_trailers"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/round_right"
            android:layout_below="@id/view_trailers"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_alignParentLeft="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trailers"
            android:textStyle="bold"
            android:layout_alignBottom="@+id/imageView_trailers"
            android:layout_toRightOf="@+id/imageView_trailers"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_trailers"
            android:layout_marginTop="@dimen/scroll_view_margin"
            android:layout_marginBottom="@dimen/scroll_view_margin"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/linearLayout_trailers"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:orientation="horizontal" >
            </LinearLayout>

        </HorizontalScrollView>

        <View
            android:id="@+id/view_cast"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/horizontalScrollView_trailers"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/background" />

        <ImageView
            android:id="@+id/imageView_cast"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/round_right"
            android:layout_below="@id/view_cast"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_alignParentLeft="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cast"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_alignBottom="@+id/imageView_cast"
            android:layout_toRightOf="@+id/imageView_cast"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_cast"
            android:layout_marginTop="@dimen/scroll_view_margin"
            android:layout_marginBottom="@dimen/scroll_view_margin"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/linearLayout_cast"
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>
        <View
            android:id="@+id/view_crew"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/horizontalScrollView_cast"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/background" />

        <ImageView
            android:id="@+id/imageView_crew"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/round_right"
            android:layout_below="@id/view_crew"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_alignParentLeft="true"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/textView_crew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/crew"
            android:textStyle="bold"
            android:layout_alignBottom="@+id/imageView_crew"

            android:layout_toRightOf="@+id/imageView_crew"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView_crew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_crew"
            android:layout_marginTop="@dimen/scroll_view_margin"
            android:layout_marginBottom="@dimen/scroll_view_margin"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/linearLayout_crew"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>

        <View
            android:id="@+id/view_end"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/horizontalScrollView_crew"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/background" />



    </RelativeLayout>

</ScrollView>
